# GreyDawnNetwork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MSBuildVisualStudio2019.bat  MSBuild_VisualStudio2019.bat  MinGWBuildScript.bat  README.md
src/http/: HttpServer.h  Listener.h  Session.h
src/network/: HttpServer.cpp  HttpServer.h  Listener.h  Session.cpp  Session.h  TcpClient.h
src/utility/: DirectoryMonitor.h  DynamicLibrary.cpp  DynamicLibrary.h  Exception.h  Global.h  Logger.cpp  Logger.h  PipeSignal.h  PlatfromAbstraction.h  Service.h  Singleton.h  Subprocess.h  System.h  SystemAbstraction.h  SystemErrorException.h  ThreadPool.h  Time.h  Utf8.cpp  Utf8.h  Utility.cpp  Utility.h
src/utility/Linux/: DirectoryMonitorLinux.cpp  DynamicLibraryLinux.cpp  SubprocessLinux.cpp  SystemAbstractionLinux.cpp
src/utility/PlatformImpl/: DirectoryMonitorLinux.cpp  DirectoryMonitorWin32.cpp  DynamicLibraryLinux.cpp  DynamicLibraryWin32.cpp  PlatformAbstractionLinux.cpp  PlatformAbstractionWin32.cpp  PlatfromAbstractionLinux.cpp  PlatfromAbstractionWin32.cpp  ServiceWin32.cpp  SystemAbstractionLinux.cpp  SystemAbstractionWin32.cpp
src/utility/Win32/: DynamicLibraryWin32.cpp  SubprocessWin32.cpp  SystemAbstractionWin32.cpp
tests/: CMakeLists.txt
tests/Service/: CMakeLists.txt
tests/Service/src/: ServiceTest.cpp
tests/SubprocessExample/: CMakeLists.txt
tests/SubprocessExample/src/: SubprocessExample.cpp
tests/SumDynamicLibrary/: CMakeLists.txt
tests/SumDynamicLibrary/src/: SumDynamicLibrary.cpp
tests/src/: DirectoryMonitorTest.cpp  ExpetionTest.cpp  GreyDawnNetworkTest.cpp  ServiceTest.cpp  SubprocessTest.cpp  TcpCommunicationTest.cpp  Utf8Test.cpp
